# what-is-tak-bot

./: .gitignore  README.md  config.json.example  pyproject.toml
what_is_tak_bot/: config.py  main.py
