[tool.poetry]
name = "WhatIsTakBot"
version = "0.1.0"
description = ""
authors = ["Alexander Konshin <kon2work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
uvloop = "^0.16.0"
ujson = "^5.1.0"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
